Font update and some css

--- a/overview.html
+++ b/overview.html
@@ -6,24 +6,22 @@
     <link rel="stylesheet" href="assets/styles/Reset.css">
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
 
     <title>IBiome | Room overvieuw</title>
 </head>
 <body id="overview">
 <main class="full-width container">
     <a class="nav-link active" href="index.html">IBiome</a>
-
     <section id="plantdisplay">
         <h1>My plants</h1>
-
         <div class="plantinfo">
-            <p>plant name</p>
-            <img src="./assets/pictrograms/bonzai.svg">
+          <img src="./assets/pictrograms/bonzai.svg">
             <ul>
                 <li>
                     <h2>Bonsai ficus</h2>
-                    <p>Temperature :</p>
-                    <p>Humidity :</p>
+                    <p id="Temperature">Temperature :</p>
+                    <p id="Humidity">Humidity :</p>
                 </li>
             </ul>
 
