--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <main class="full-width container">
     <header id="main">
-<h1>Welcome To IBiome</h1>
-      <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check Your plants</a></li>
+<h1>Welcome to IBiome</h1>
+      <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check your plants</a></li>
     </header>
 </main>
 </body>
