--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
 <main class="full-width container">
     <header id="main">
-<h1>Welcome to IBiome</h1>
+<h1>Welcome to Ibiome</h1>
       <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check your plants</a></li>
     </header>
 </main>
