--- a/public/overview.html
+++ b/public/overview.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,30 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/screen.css">
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
-    <title>IBiome | Room overvieuw</title>
+    <title>Plant overview</title>
 </head>
+
 <body id="overview">
-<main class="full-width container">
-    <a id="homelink" class="nav-link active" href="index.html">IBiome</a>
-    <section id="plantdisplay">
-        <h1>My plants</h1>
-        <div class="plantinfo">
-          <img id="picto" src="./assets/pictrograms/bonzai.svg">
-            <ul>
-                <li>
-                    <h2>Bonsai ficus</h2>
-                    <p>Location : Bedroom</p>
-                    <p id="Temperature">Temperature :</p>
-                    <p id="Humidity">Humidity :</p>
-                </li>
-            </ul>
+    <main class="full-width container">
+        <a id="homelink" class="nav-link active" href="index.html">IBiome</a>
+        <section id="plantdisplay">
+            <h1>My plants</h1>
+            <div class="plantinfo">
+                <img id="picto" src="./assets/pictrograms/bonzai.svg">
+                <ul>
+                    <li>
+                        <h2>Bonsai ficus</h2>
+                        <p>Location : Bedroom</p>
+                        <p id="Temperature">Temperature :</p>
+                        <p id="Humidity">Humidity :</p>
+                    </li>
+                </ul>
 
-        </div>
-    </section>
-</main>
+            </div>
+        </section>
+    </main>
 
-<script src="assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
+
 </html>
