--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
 <body>
     <main class="full-width container">
         <header id="main">
-            <h1>Welcome to Ibiome</h1>
-            <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check your plants</a></li>
+            <h1>Welcome to<p id="title">IBiome</p>
+            </h1>
+            <a class="btn btn-primary btn-lg btn-block" href="overview.html">Checkup on your plants</a></li>
         </header>
     </main>
-    
 </body>
 
 </html>
