--- a/public/overview.html
+++ b/public/overview.html
@@ -19,11 +19,18 @@
             <div class="plantinfo">
                 <img id="picto" src="./assets/pictrograms/bonzai.svg">
                 <ul>
-                    <li>
-                        <h2>Bonsai ficus</h2>
-                        <p>Location : Bedroom</p>
-                        <p id="Temperature">Temperature :</p>
-                        <p id="Humidity">Humidity :</p>
+                    <h2>Bonsai ficus</h2>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Location
+                        <span class="badge badge-primary badge-pill">Bedroom</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Temperature
+                        <span id="Temperature" class="badge badge-primary badge-pill">14</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Humidity
+                        <span id="Humidity" class="badge badge-danger badge-pill">5</span>
                     </li>
                 </ul>
 
