--- a/public/overview.html
+++ b/public/overview.html
@@ -26,11 +26,11 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         Temperature
-                        <span id="Temperature" class="badge badge-primary badge-pill">14</span>
+                        <span id="Temperature" class="badge badge-info badge-pill">°C</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         Humidity
-                        <span id="Humidity" class="badge badge-danger badge-pill">5</span>
+                        <span id="Humidity" class="badge badge-info badge-pill">%</span>
                     </li>
                 </ul>
 
