--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         </header>
             <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check your plants</a></li>
     </main>
+    <link rel="manifest" href="/public/manifest.json">
 </body>
+
 
 </html>
