--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
             <h1>Welcome to<p id="title">IBiome</p>
             </h1>
         </header>
-            <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check your plants</a></li>
+        <a class="btn btn-primary btn-lg btn-block" href="overview.html">Check your plants</a></li>
     </main>
-    <link rel="manifest" href="/public/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 </body>
 
 
