--- a/public/overview.html
+++ b/public/overview.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/screen.css">
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
     <title>Plant overview</title>
 </head>
 
