--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/styles/Reset.css">
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
     <title>IBiome</title>
 </head>
