localforage js add....

--- a/public/overview.html
+++ b/public/overview.html
@@ -40,6 +40,7 @@
     </main>
 
     <script src="assets/js/index.js"></script>
+    <script src="assets/js/localforage.js"></script>
 </body>
 
 </html>
